# quant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  A_SHARE_CODEX_ALPHA_LAB_SPEC.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: phase6-94-coverage-report.md  phase6-historical-taxonomy-bridge-report.md  phase6-industry-coverage-report.md  phase6-lint-fix-report.md  phase6-relay-shape-fix-report.md  phase6-warning-capability-fix-report.md  task-6-fix7-report.md  task-6-fix8-report.md  task-7-report.md
config/: baseline.yaml  costs.yaml  data_sources.yaml  factor_evaluation.yaml  factor_registry.yaml  mining.yaml  research_data.yaml  robustness.yaml  splits.yaml  universe.yaml
docs/: data_dictionary.md  database_design.md  phase2_baseline.md  phase3_factor_evaluation.md  phase4_factor_mining.md  phase5_research_data.md  phase6_robustness.md
experiments/phase4-formal/: final_report.md  research_brief.md  run_manifest.json
schemas/: decision.schema.json  hypothesis.schema.json  proposal.schema.json
scripts/: codex_mining_loop.sh
src/alpha_lab/: __init__.py  cli.py  quality_contracts.py  smoke.py
tests/: test_phase0_contract.py  test_phase1_contract.py  test_phase2_contract.py  test_phase3_contract.py  test_phase4_contract.py  test_phase5_contract.py  test_phase6_contract.py  test_smoke.py
tests/fixtures/: akshare_stock_zh_a_hist.csv
tests/integration/: test_exposure_snapshot.py  test_final_test_gate.py  test_pipeline.py  test_research_data_pipeline.py  test_research_snapshot.py  (+2 more)
(+130 files in other folders)
