[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a-share-alpha-lab"
version = "0.1.0"
description = "Reproducible A-share factor research environment"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "akshare",
    "baostock",
    "duckdb",
    "jupyterlab",
    "lightgbm",
    "matplotlib",
    "mlflow",
    "numpy",
    "pandas",
    "plotly",
    "polars",
    "pyarrow",
    "pydantic",
    "pyqlib @ git+https://github.com/microsoft/qlib.git@da920b7f954f48ab1bb64117c976710de198373e",
    "pyyaml",
    "rich",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tables",
    "tushare",
    "typer",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_lab"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
